# mrpool-core

./: .gitignore  CITATION.bib  CITATION.cff  ENTERPRISE.md  LICENSE  Makefile  NOTICE  README.md  codemeta.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release-paper.yml
experiments/: benchmark_ray.py  gnn_hjb_control.py
mrpool/: __init__.py
mrpool/control/: hjb_lookup.py
mrpool/coordination/: cc.py
mrpool/reporting/: pilot_report.py
mrpool/stats/: bootstrap.py
paper/: main.tex
paper/scripts/: make_figures_final.py  make_results_text.py  make_tables_final.py
sales/: daily_plan_30_days_en.md  daily_plan_30_days_pt.md
sales/linkedin_posts/: post1_wrong_abstraction_en.md  post1_wrong_abstraction_pt.md  post2_static_thresholds_en.md  post2_static_thresholds_pt.md  post3_pilot_delta_en.md  post3_pilot_delta_pt.md
sales/metrics_governance/: metrics_v1.0.md
sales/outreach_templates/: calendly_templates_en.md  calendly_templates_pt.md
sales/pilot_sow/: pilot_sow_en.md  pilot_sow_pt.md
sales/tracker/: outreach_tracker.csv
scripts/: configure_repo_metadata.py
site/: index.html
tests/: test_bootstrap.py
