[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrpool-core"
version = "0.1.0"
description = "Open research framework for coordination analysis and control-oriented experimentation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "MrPool Labs" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "ray[default]>=2.10",
  "networkx>=3.2",
  "scikit-learn>=1.4",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
include = ["mrpool*"]
